--- a/sample.html
+++ b/sample.html
@@ -7,8 +7,8 @@
     <style>
         /* PHASE 1: CSS FOUNDATION & DESIGN SYSTEM */
         * {
-            margin: 0;
-            padding: 0;
+            margin: 2;
+            padding: 2;
             box-sizing: border-box;
         }
 
@@ -684,6 +684,7 @@
     </style>
 </head>
 <body>
+    <h1>Sample Html page</h1>
     <div class="container">
         <!-- PHASE 1 & 2: HEADER AND NAVIGATION -->
         <header>
